tabulator table: fixed horizontal scrolling issues, superfluous and ugly borders

--- a/src/main/resources/static/css/tabulator.css
+++ b/src/main/resources/static/css/tabulator.css
@@ -1,5 +1,5 @@
 /*Theme the Tabulator element*/
-#results_table .tabulator {
+.tabulator {
     background-color:black;
     border: 0;
     border-radius: 0;
@@ -10,14 +10,12 @@
     border: 0;
 }
 
-/*.tabulator .tabulator-header .tabulator-col */
-
 .tabulator-col *, .tabulator-col-content * {
     padding: 0;
 }
 
 /*Theme the header*/
-#results_table .tabulator-header * {
+.tabulator-header * {
     background-color:black;
     color:#FEF433;
 }
@@ -33,15 +31,15 @@
 
 
 /*Allow column header names to wrap lines*/
-#results_table .tabulator-header .tabulator-col,
-#results_table .tabulator-header .tabulator-col-row-handle {
+.tabulator-header .tabulator-col,
+.tabulator-header .tabulator-col-row-handle {
     white-space: normal;
 }
 
 /*Color even rows*/
-#results_table .tabulator-tableHolder .tabulator-table .tabulator-row *,
-#results_table .tabulator-header .tabulator-col,
-#results_table .tabulator .tabulator-headers {
+.tabulator-tableHolder .tabulator-table .tabulator-row *,
+.tabulator-header .tabulator-col,
+.tabulator .tabulator-headers {
     border: 0;
     border-left: 1px solid #444444;
 }
@@ -51,34 +49,60 @@
     border: 10px;
 }
 
-#results_table .tabulator-tableHolder .tabulator-table .tabulator-row {
+.tabulator-tableHolder .tabulator-table .tabulator-row {
     min-height: 8px;
 }
 
-#results_table .tabulator-tableHolder {
+.tabulator-tableHolder {
     border: 0;
     background-color: black;
 }
 
 /*Color the table rows*/
-#results_table .tabulator-tableHolder .tabulator-table .tabulator-row {
+.tabulator-tableHolder .tabulator-table .tabulator-row {
     color: #80D500;
     background-color: black;
 }
 
 /*Color even rows*/
-    #results_table .tabulator-tableHolder .tabulator-table .tabulator-row:nth-child(even) {
+.tabulator-tableHolder .tabulator-table .tabulator-row:nth-child(even) {
     background-color: black;
 }
 
-#results_table .tabulator-cell {
+.tabulator-cell {
     padding: 1px 5px 0 5px;
 }
 
-#results_table .tabulator-cell:first-child {
+.tabulator-cell:first-child {
     color: #4682B4;
     background-color: #1A0005;
     text-align: right;
     padding-right: 7px;
     width: 54px;
 }
+
+/* FIXES horizontal scroll bar and scrolling issue */
+.tabulator-cell, .tabulator-col tabulator-sortable
+{
+    max-width: 100%;
+}
+
+/* FIXES stupid/inconsistent extra borders */
+.tabulator .tabulator-header .tabulator-col,
+ .tabulator .tabulator-header .tabulator-frozen.tabulator-frozen-left {
+    border-right: 0;
+    background: none;
+}
+
+.tabulator .tabulator-header .tabulator-frozen.tabulator-frozen-left {
+    border-right: 0;
+}
+
+.tabulator-row .tabulator-frozen.tabulator-frozen-left,
+.tabulator-cell tabulator-frozen tabulator-frozen-left,
+.tabulator-header .tabulator-col:first-child,
+.tabulator .tabulator-headers:first-child {
+    border-left: 0;
+}
+
+/* FIXED */
